# bt_vending_machine

./: .gitignore  CMakeLists.txt  README.md  vending_machine_tree.xml
include/: vm_conditions.h  vm_payment.h  vm_sys.h
src/: main.cpp  vm_sys.cpp
